apps/rustatio/rustatio-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustatio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustatio
  template:
    metadata:
      labels:
        app: rustatio
    spec:
      containers:
        - name: rustatio
          image: localhost:32000/rustatio
          ports:
            - name: rustatio
              containerPort: 8080
          volumeMounts:
            - name: rustatio-data
              mountPath: /data
            - name: rustatio-torrents
              mountPath: /torrents
      volumes:
        - name: rustatio-data
          emptyDir: {}
        - name: rustatio-torrents
          emptyDir: {}
