apps/rustatio/rustatio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustatio
spec:
  type: ClusterIP
  selector:
    app: rustatio
  ports:
    - name: rustatio
      port: 80
      targetPort: 8080
