apps/rustatio/rustatio-ext-ing.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress
metadata:
  name: rustatio-ext
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0m
  labels:
    type: external
    authentified: "true"
spec:
  tls:
    - hosts:
        - rustatio.{hostname}
      secretName: rustatio.ing.cert
  rules:
    - host: rustatio.{hostname}
      http:
        paths:
          - backend:
              service:
                name: rustatio
                port:
                  number: 80
            path: /
            pathType: Prefix
