apps/rustatio/rustatio-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustatio-local
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0m
  labels:
    type: local
spec:
  rules:
    - host: rustatio.local
      http:
        paths:
          - backend:
              service:
                name: rustatio
                port:
                  number: 80
            path: /
            pathType: Prefix
